# ComProScanner

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  paper-dependencies.txt  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
about/citation/: index.html
about/contact/: index.html
about/contribution/: index.html
about/license/: index.html
about/project-structure/: index.html
docs/: index.md  rag-config.md
docs/about/: citation.md  contact.md  contribution.md  license.md  project-structure.md
docs/getting-started/: installation.md  quick-start.md
docs/usage/: article-processing.md  data-extraction.md  metadata-collection.md
docs/usage/evaluation/: agentic.md  overview.md  semantic.md
docs/usage/visualization/: data-viz.md  eval-viz.md  overview.md
examples/: checked_dois.txt  minimal_example.py  piezo_test_dois_random.txt  test_example.py
examples/db/: README.md
examples/piezo_test/: ground_truth.json
examples/piezo_test/eval-results/agentic-evaluation/: deepseek-v3-0324-agentic-evaluation-results.json  gemini-2.0-flash-agentic-evaluation-results.json  gemini-2.5-flash-preview-agentic-evaluation-results.json  gemma-3-27b-it-agentic-evaluation-results.json  gpt-4.1-nano-agentic-evaluation-results.json  gpt-4o-mini-agentic-evaluation-results.json  llama-3.3-70b-instruct-agentic-evaluation-results.json  llama-4-maverick-17b-instruct-agentic-evaluation-results.json  qwen-2.5-72b-instruct-agentic-evaluation-results.json  qwen3-235b-a22b-agentic-evaluation-results.json
examples/piezo_test/eval-results/semantic-evaluation/: deepseek-v3-0324-semantic-evaluation-results.json  gemini-2.0-flash-semantic-evaluation-results.json  gemini-2.5-flash-preview-semantic-evaluation-results.json  gemma-3-27b-it-semantic-evaluation-results.json  gpt-4.1-nano-semantic-evaluation-results.json  gpt-4o-mini-semantic-evaluation-results.json  llama-3.3-70b-instruct-semantic-evaluation-results.json  llama-4-maverick-17b-instruct-semantic-evaluation-results.json  qwen-2.5-72b-instruct-semantic-evaluation-results.json  qwen3-235b-a22b-semantic-evaluation-results.json
examples/piezo_test/model-outputs/deepseek/: deepseek-v3-0324-piezo-ceramic-test-results.json
examples/piezo_test/model-outputs/google/: gemini-2.0-flash-piezo-ceramic-test-results.json  gemini-2.5-flash-preview-piezo-ceramic-test-results.json  gemma-3-27b-it-piezo-ceramic-test-results.json
examples/piezo_test/model-outputs/meta/: llama-3.3-70b-instruct-piezo-ceramic-test-results.json  llama-4-maverick-17b-instruct-piezo-ceramic-test-results.json
examples/piezo_test/model-outputs/openai/: gpt-4.1-nano-piezo-ceramic-test-results.json  gpt-4o-mini-piezo-ceramic-test-results.json
examples/piezo_test/model-outputs/qwen/: qwen-2.5-72b-instruct-piezo-ceramic-test-results.json  qwen3-235b-a22b-piezo-ceramic-test-results.json
examples/process-paper/: create_kg_from_best_model.py  get_price_data_json.py  leaderboard-text_from_lmarena.json  neo4j_export.csv  plot_avg_normalization.py  plot_avg_normalization_single.py  plot_combined_confusion_matrix.py  plot_data_distributions_pie_charts.py  plot_lmarena_price_comparison.py  scatterplot-data_from_lmarena.json  test_materials_parser.py
examples/process-paper/create_figures/: create_kg_from_best_model.py
examples/process-paper/create_figures/create_lmarena_leaderboard/: plot_lmarena_price_comparison.py  price_data.json
examples/process-paper/create_figures/plot_performance_and_data_distribution_charts/: plot_avg_normalization.py  plot_avg_normalization_single.py  plot_combined_confusion_matrix.py  plot_data_distributions_pie_charts.py
examples/process-paper/get_MP_piezo_data/: common_materials_ids.txt  get_total_higher_d33.py
examples/process-paper/get_table_data/: test_embedding_model.py  test_materials_parser.py
getting-started/installation/: index.html
getting-started/quick-start/: index.html
overrides/partials/: footer.html
rag-config/: index.html
search/: search_index.json
src/comproscanner/: __init__.py  comproscanner.py  data_visualiser.py  data_visualizer.py  eval_visualiser.py  eval_visualizer.py
src/comproscanner/article_processors/: elsevier_processor.py  iop_processor.py  pdfs_processor.py  springer_processor.py  wiley_processor.py
src/comproscanner/extract_flow/: main_extraction_flow.py
src/comproscanner/metadata_extractor/: fetch_metadata.py  filter_metadata.py
src/comproscanner/post_processing/: create_kg.py  data_cleaner.py  get_paper_data.py  save_results.py  semantic_evaluator.py
src/comproscanner/utils/: common_functions.py  data_preparator.py  database_manager.py  embeddings.py  error_handler.py  get_paper_data.py  logger.py  pdf_to_markdown_text.py  prepare_iop_files.py  save_results.py
stylesheets/: extra.css
tests/: conftest.py  elsevier_test.py  elsevier_test.xml  main_test.py  springer_test.py  springer_test.xml  test_elsevier.py  test_extract_flow.py  test_wiley.py  wiley_test.py
tests/test_apis_primary/: test_springer.py
tests/test_article_processors/: test_elsevier_processor.py  test_iop_processor.py  test_pdfs_processor.py  test_springer_processor.py  test_wiley_processor.py
tests/test_metadata/: test_fetch_metadata.py  test_filter_metadata.py
tests/test_post_processing/: test_data_cleaner.py
tests/test_post_processing/test_evaluation/: test_eval_flow.py  test_semantic_evaluator.py
tests/test_post_processing/test_visualization/: test_create_knowledge_graph.py  test_data_distribution_visualizer.py  test_eval_plot_visualizer.py
tests/test_utils/: test_common_functions.py  test_database_manager.py  test_embeddings.py  test_pdf_to_markdown_text.py  test_prepare_iop_files.py
usage/article-processing/: index.html
usage/data-extraction/: index.html
usage/evaluation/agentic/: index.html
usage/evaluation/overview/: index.html
usage/evaluation/semantic/: index.html
usage/metadata-collection/: index.html
usage/visualization/data-viz/: index.html
usage/visualization/eval-viz/: index.html
usage/visualization/overview/: index.html
(+7451 files in other folders)
