[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comproscanner"
version = "0.1.2"
description = "Multi-agent system for extracting and processing structured composition-property data from scientific literature"
readme = "README.md"
authors = [{ name = "Aritra Roy", email = "contact@aritraroy.live" }]
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests",
    "python-dotenv",
    "tqdm",
    "lxml",
    "pandas",
    "torch",
    "langchain",
    "transformers",
    "tokenizers",
    "mysql",
    "mysql-connector",
    "langchain_community",
    "crewai",
    "crewai-tools",
    "chromadb",
    "docling",
    "sentence-transformers",
    "neo4j",
    "pymatgen",
    "seaborn",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]
docs = ["mkdocs-material", "mkdocs-minify-plugin"]
[project.urls]
"Homepage" = "https://github.com/slimeslab/ComProScanner"
"Bug Tracker" = "https://github.com/slimeslab/ComProScanner/issues"
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
